UI bugfix before April 30th
- Modified `deploy-client` component to exclude `high availability` until API
is supported with that param. Also changed `auth_url` intput to textarea
such that it wouldn't cut off the endpoint. Dialog margins are updated for
optimal display for param label and input fields.

- Modified `deploy-client` form to list all zones instead of filtering based on
zone types.

- Fixed log management input in new zone form (`zone-form`) to have this
form input to be optional.

- Updated `en.json` for better-suited placeholder for client node deploy
form: `https://<JWKS-endpoint> (optional)` to denote optionality. Also
updated i18n on blockchain wizard which was showing untranslated
version of `regionalTitle`.

--- a/ui/src/app/nodes/deploy-client/deploy-client.component.scss
+++ b/ui/src/app/nodes/deploy-client/deploy-client.component.scss
@@ -1,7 +1,7 @@
 :host ::ng-deep form {
   label {
     white-space: nowrap;
-    padding-right: 150px !important; 
+    padding-right: 110px !important; 
   }
   .clr-form-control{
     margin-top: 0.5rem;
@@ -12,12 +12,22 @@
     max-width: 50%
   }
   .select-width {
-    min-width: 200px; 
-    max-width: 300px;
+    min-width: 350px; 
+    max-width: 350px;
   }
   .input-width {
-    min-width: 200px; 
-    max-width: 300px;
+    min-width: 300px; 
+    max-width: 350px;
+  }
+  .textarea-margin-left {
+    margin-left: 0.15rem;
+  }
+  .input-textarea-width {
+    padding: 0.1rem 0.2rem;
+    min-width: 350px;
+    margin-top: -0.1rem;
+    height: 70px;
+    resize: none;
   }
 
 }
